(PC-12236)[PRO]: ui-kit => add fieldset layouts for radio and checkbox group and fix spacings

--- a/pro/src/styles/variables/_forms.scss
+++ b/pro/src/styles/variables/_forms.scss
@@ -16,3 +16,7 @@ $error-text-color: #B60025;
 $placeholder-text-color: #67686B;
 
 $input-right-icon-padding: 32px;
+
+$input-error-reserved-space: 16px;
+$input-space-before-error: 8px;
+$label-space-before-input: 8px;
